--- a/project-new/package.json
+++ b/project-new/package.json
@@ -12,11 +12,16 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "breakpoint": "^0.1.6",
     "breakpoint-sass": "^2.7.1",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-sass": "^3.0.0",
+    "normalize-scss": "^6.0.0",
+    "sass-autoprefixer": "^1.0.1",
+    "susy": "^2.2.12",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
